infra/selenium-grid/node-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-node-chrome
  namespace: ara-mangle-yaan
  labels:
    app: selenium-node-chrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-node-chrome
  template:
    metadata:
      labels:
        app: selenium-node-chrome
    spec:
      containers:
        - name: selenium-node-chrome
          image: harbor-repo.vmware.com/csp_qe/selenium/node-chrome-debug:3.141
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5900
          resources:
            requests:
              memory: "2048M"
              cpu: "1000m"
            limits:
              memory: "2048M"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
