infra/selenium-grid/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcsp-e2e-qe-ingress
  namespace: ara-mangle-yaan
  labels:
    app: csp-e2e-qe
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: avi-lb
  rules:
    - host: selenium-mangle-yaan.ara.decc.vmware.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: e2e-qe-selenium-hub-service-dev
                port:
                  number: 31001
        # - path:
        #   backend:
        #     serviceName: e2e-qe-mysql
        #     servicePort: 30002
